syz-cluster: refactor Dockerfiles
Copy everything into the build context.
Add a .dockerignore file to avoid copying the definitely unnecessary
files and folders.
Check copyrights presence in Dockerfiles.

--- a/syz-cluster/controller/Dockerfile
+++ b/syz-cluster/controller/Dockerfile
@@ -1,17 +1,16 @@
+# syntax=docker.io/docker/dockerfile:1.7-labs
+# Copyright 2025 syzkaller project authors. All rights reserved.
+# Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.
 FROM golang:1.24-alpine AS controller-builder
 
 WORKDIR /build
 
 # Prepare the dependencies.
-COPY go.mod ./
-COPY go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
-COPY pkg/gcs/ pkg/gcs/
-COPY pkg/osutil/ pkg/osutil/
 
 # Build the tool.
-COPY syz-cluster/controller/ syz-cluster/controller/
-COPY syz-cluster/pkg/ syz-cluster/pkg/
+COPY --exclude=.git . .
 RUN go build -o /bin/controller /build/syz-cluster/controller
 
 # Build the container.
