--- a/syz-cluster/tools/send-test-email/Dockerfile
+++ b/syz-cluster/tools/send-test-email/Dockerfile
@@ -1,21 +1,16 @@
+# syntax=docker.io/docker/dockerfile:1.7-labs
+# Copyright 2025 syzkaller project authors. All rights reserved.
+# Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.
 FROM golang:1.24-alpine AS builder
 
 WORKDIR /build
 
 # Prepare the dependencies.
-COPY go.mod ./
-COPY go.sum ./
+COPY go.mod go.sum ./
 RUN go mod download
-COPY dashboard/dashapi/ dashboard/dashapi/
-COPY pkg/gcs/ pkg/gcs/
-COPY pkg/email/ pkg/email/
-COPY pkg/auth/ pkg/auth/
-COPY pkg/gcpsecret/ pkg/gcpsecret/
 
 # Build the tool.
-COPY syz-cluster/tools/send-test-email/*.go syz-cluster/tools/send-test-email/
-COPY dashboard/dashapi/ dashboard/dashapi/
-COPY syz-cluster/pkg/ syz-cluster/pkg/
+COPY --exclude=.git . .
 RUN go build -o /bin/send-email /build/syz-cluster/tools/send-test-email
 
 # Create the actual container.
