all: disable dupl linter for tests

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -137,6 +137,7 @@ linters:
           - whitespace # TODO: fix the code generation
       - path: (.*_test.go)
         linters:
+          - dupl
           - goconst
 
 issues:
