dashboard/app: fix format in cron.yaml
It fixes the deployment error.

--- a/dashboard/app/cron.yaml
+++ b/dashboard/app/cron.yaml
@@ -38,4 +38,4 @@ cron:
   schedule: 15 of month 00:00
 # Weekly update the kernel-file -> subsystems relationship
 - url: /cron/update_coverdb_subsystems
-  schedule: every monday
+  schedule: every monday 00:00
