syz-cluster: build commit graph during triage
It will accelerate various commit search operations by orders of
magnitude.

--- a/syz-cluster/workflow/triage-step/workflow-template.yaml
+++ b/syz-cluster/workflow/triage-step/workflow-template.yaml
@@ -24,6 +24,7 @@ spec:
             - -c
             - |
               git clone --reference /kernel-repo -c remote.origin.fetch="+refs/heads/*:refs/heads/*" /kernel-repo /workdir
+              git -C /workdir commit-graph write --reachable
           env:
             - name: GIT_DISCOVERY_ACROSS_FILESYSTEM
               value: "1"
