--- a/dashboard/config/linux/upstream-arm64-kasan-base.config
+++ b/dashboard/config/linux/upstream-arm64-kasan-base.config
@@ -5,18 +5,18 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 syzkaller Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="Debian clang version 20.1.7 (++20250616065708+6146a88f6049-1~exp1~20250616065826.132)"
+CONFIG_CC_VERSION_TEXT="Debian clang version 21.1.8 (++20251221033036+2078da43e25a-1~exp1~20251221153213.50)"
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
-CONFIG_CLANG_VERSION=200107
+CONFIG_CLANG_VERSION=210108
 CONFIG_AS_IS_LLVM=y
-CONFIG_AS_VERSION=200107
+CONFIG_AS_VERSION=210108
 CONFIG_LD_VERSION=0
 CONFIG_LD_IS_LLD=y
-CONFIG_LLD_VERSION=200107
-CONFIG_RUSTC_VERSION=108700
+CONFIG_LLD_VERSION=210108
+CONFIG_RUSTC_VERSION=109101
 CONFIG_RUST_IS_AVAILABLE=y
-CONFIG_RUSTC_LLVM_VERSION=200101
+CONFIG_RUSTC_LLVM_VERSION=210102
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
@@ -24,7 +24,13 @@ CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_ASSUME=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_CC_HAS_COUNTED_BY=y
+CONFIG_CC_HAS_MULTIDIMENSIONAL_NONSTRING=y
+CONFIG_LD_CAN_USE_KEEP_IN_OVERLAY=y
 CONFIG_RUSTC_HAS_COERCE_POINTEE=y
+CONFIG_RUSTC_HAS_SPAN_FILE=y
+CONFIG_RUSTC_HAS_UNNECESSARY_TRANSMUTES=y
+CONFIG_RUSTC_HAS_FILE_WITH_NUL=y
+CONFIG_RUSTC_HAS_FILE_AS_C_STR=y
 CONFIG_PAHOLE_VERSION=0
 CONFIG_CONSTRUCTORS=y
 CONFIG_IRQ_WORK=y
@@ -5841,6 +5847,8 @@ CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
 # CONFIG_INIT_STACK_NONE is not set
 # CONFIG_INIT_STACK_ALL_PATTERN is not set
 CONFIG_INIT_STACK_ALL_ZERO=y
+CONFIG_CC_HAS_SANCOV_STACK_DEPTH_CALLBACK=y
+# CONFIG_KSTACK_ERASE is not set
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
 CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
