--- a/dashboard/config/linux/upstream-riscv64-kasan-base.config
+++ b/dashboard/config/linux/upstream-riscv64-kasan-base.config
@@ -5,24 +5,30 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/riscv syzkaller Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="riscv64-linux-gnu-gcc (Debian 12.2.0-13) 12.2.0"
+CONFIG_CC_VERSION_TEXT="riscv64-linux-gnu-gcc (Debian 14.2.0-19) 14.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=120200
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24000
+CONFIG_AS_VERSION=24400
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24000
+CONFIG_LD_VERSION=24400
 CONFIG_LLD_VERSION=0
-CONFIG_RUSTC_VERSION=108700
+CONFIG_RUSTC_VERSION=109101
 CONFIG_RUST_IS_AVAILABLE=y
-CONFIG_RUSTC_LLVM_VERSION=200101
+CONFIG_RUSTC_LLVM_VERSION=210102
 CONFIG_CC_CAN_LINK=y
-CONFIG_GCC_ASM_GOTO_OUTPUT_BROKEN=y
+CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
+CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
+CONFIG_CC_HAS_ASSUME=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_LD_CAN_USE_KEEP_IN_OVERLAY=y
 CONFIG_RUSTC_HAS_COERCE_POINTEE=y
+CONFIG_RUSTC_HAS_SPAN_FILE=y
+CONFIG_RUSTC_HAS_UNNECESSARY_TRANSMUTES=y
+CONFIG_RUSTC_HAS_FILE_WITH_NUL=y
+CONFIG_RUSTC_HAS_FILE_AS_C_STR=y
 CONFIG_PAHOLE_VERSION=0
 CONFIG_CONSTRUCTORS=y
 CONFIG_IRQ_WORK=y
@@ -301,6 +307,7 @@ CONFIG_TRACEPOINTS=y
 CONFIG_64BIT=y
 CONFIG_RISCV=y
 CONFIG_RUSTC_SUPPORTS_RISCV=y
+CONFIG_GCC_SUPPORTS_DYNAMIC_FTRACE=y
 CONFIG_ARCH_MMAP_RND_BITS_MIN=18
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=8
 CONFIG_ARCH_MMAP_RND_BITS_MAX=24
@@ -388,6 +395,7 @@ CONFIG_RISCV_ISA_V_UCOPY_THRESHOLD=768
 CONFIG_RISCV_ISA_ZAWRS=y
 CONFIG_RISCV_ISA_ZACAS=y
 CONFIG_TOOLCHAIN_HAS_ZBB=y
+CONFIG_TOOLCHAIN_HAS_VECTOR_CRYPTO=y
 CONFIG_TOOLCHAIN_HAS_ZBA=y
 CONFIG_RISCV_ISA_ZBA=y
 CONFIG_RISCV_ISA_ZBB=y
@@ -726,7 +734,10 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 # end of GCOV-based kernel profiling
 
 CONFIG_HAVE_GCC_PLUGINS=y
-CONFIG_FUNCTION_ALIGNMENT=0
+CONFIG_FUNCTION_ALIGNMENT_4B=y
+CONFIG_FUNCTION_ALIGNMENT=4
+CONFIG_CC_HAS_MIN_FUNCTION_ALIGNMENT=y
+CONFIG_CC_HAS_SANE_FUNCTION_ALIGNMENT=y
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -5567,6 +5578,10 @@ CONFIG_CRYPTO_USER_API_ENABLE_OBSOLETE=y
 #
 # Accelerated Cryptographic Algorithms for CPU (riscv)
 #
+# CONFIG_CRYPTO_AES_RISCV64 is not set
+# CONFIG_CRYPTO_GHASH_RISCV64 is not set
+# CONFIG_CRYPTO_SM3_RISCV64 is not set
+# CONFIG_CRYPTO_SM4_RISCV64 is not set
 # end of Accelerated Cryptographic Algorithms for CPU (riscv)
 
 CONFIG_CRYPTO_HW=y
@@ -5647,7 +5662,9 @@ CONFIG_CRYPTO_LIB_GF128MUL=y
 CONFIG_CRYPTO_LIB_POLY1305_RSIZE=2
 CONFIG_CRYPTO_LIB_SHA1=y
 CONFIG_CRYPTO_LIB_SHA256=y
+CONFIG_CRYPTO_LIB_SHA256_ARCH=y
 CONFIG_CRYPTO_LIB_SHA512=y
+CONFIG_CRYPTO_LIB_SHA512_ARCH=y
 # end of Crypto library routines
 
 CONFIG_XXHASH=y
@@ -5768,6 +5785,7 @@ CONFIG_DEBUG_MISC=y
 # Compile-time checks and compiler options
 #
 CONFIG_DEBUG_INFO=y
+CONFIG_AS_HAS_NON_CONST_ULEB128=y
 # CONFIG_DEBUG_INFO_NONE is not set
 # CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT is not set
 CONFIG_DEBUG_INFO_DWARF4=y
@@ -5775,6 +5793,7 @@ CONFIG_DEBUG_INFO_DWARF4=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 CONFIG_DEBUG_INFO_COMPRESSED_NONE=y
 # CONFIG_DEBUG_INFO_COMPRESSED_ZLIB is not set
+# CONFIG_DEBUG_INFO_COMPRESSED_ZSTD is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_FRAME_WARN=2048
@@ -5877,6 +5896,7 @@ CONFIG_HAVE_ARCH_KASAN_VMALLOC=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
 CONFIG_KASAN=y
+CONFIG_CC_HAS_KASAN_MEMINTRINSIC_PREFIX=y
 CONFIG_KASAN_GENERIC=y
 # CONFIG_KASAN_OUTLINE is not set
 CONFIG_KASAN_INLINE=y
@@ -5986,8 +6006,12 @@ CONFIG_RCU_EQS_DEBUG=y
 CONFIG_USER_STACKTRACE_SUPPORT=y
 CONFIG_NOP_TRACER=y
 CONFIG_HAVE_RETHOOK=y
+CONFIG_HAVE_FUNCTION_TRACER=y
+CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_FREGS=y
 CONFIG_HAVE_FTRACE_GRAPH_FUNC=y
+CONFIG_HAVE_DYNAMIC_FTRACE=y
+CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_TRACE_CLOCK=y
 CONFIG_RING_BUFFER=y
@@ -5999,6 +6023,8 @@ CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 CONFIG_TRACEFS_AUTOMOUNT_DEPRECATED=y
 # CONFIG_BOOTTIME_TRACING is not set
+# CONFIG_FUNCTION_TRACER is not set
+# CONFIG_STACK_TRACER is not set
 # CONFIG_IRQSOFF_TRACER is not set
 # CONFIG_SCHED_TRACER is not set
 # CONFIG_HWLAT_TRACER is not set
@@ -6039,6 +6065,7 @@ CONFIG_HAVE_SAMPLE_FTRACE_DIRECT_MULTI=y
 #
 # arch/riscv/kernel Testing and Coverage
 #
+CONFIG_AS_HAS_ULEB128=y
 CONFIG_RUNTIME_KERNEL_TESTING_MENU=y
 # end of arch/riscv/kernel Testing and Coverage
 # end of riscv Debugging
