--- a/dashboard/config/linux/upstream-s390-kasan-base.config
+++ b/dashboard/config/linux/upstream-s390-kasan-base.config
@@ -5,24 +5,30 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/s390 syzkaller Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="s390x-linux-gnu-gcc (Debian 12.2.0-14) 12.2.0"
+CONFIG_CC_VERSION_TEXT="s390x-linux-gnu-gcc (Debian 14.2.0-19) 14.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=120200
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24000
+CONFIG_AS_VERSION=24400
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24000
+CONFIG_LD_VERSION=24400
 CONFIG_LLD_VERSION=0
-CONFIG_RUSTC_VERSION=108700
+CONFIG_RUSTC_VERSION=109101
 CONFIG_RUST_IS_AVAILABLE=y
-CONFIG_RUSTC_LLVM_VERSION=200101
+CONFIG_RUSTC_LLVM_VERSION=210102
 CONFIG_CC_CAN_LINK=y
-CONFIG_GCC_ASM_GOTO_OUTPUT_BROKEN=y
+CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
+CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
+CONFIG_CC_HAS_ASSUME=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_LD_CAN_USE_KEEP_IN_OVERLAY=y
 CONFIG_RUSTC_HAS_COERCE_POINTEE=y
+CONFIG_RUSTC_HAS_SPAN_FILE=y
+CONFIG_RUSTC_HAS_UNNECESSARY_TRANSMUTES=y
+CONFIG_RUSTC_HAS_FILE_WITH_NUL=y
+CONFIG_RUSTC_HAS_FILE_AS_C_STR=y
 CONFIG_PAHOLE_VERSION=0
 CONFIG_CONSTRUCTORS=y
 CONFIG_IRQ_WORK=y
@@ -308,7 +314,6 @@ CONFIG_AUDIT_ARCH=y
 CONFIG_NO_IOPORT_MAP=y
 CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_KASAN_SHADOW_OFFSET=0x1C000000000000
-CONFIG_CC_ASM_FLAG_OUTPUT_BROKEN=y
 CONFIG_CC_HAS_ASM_AOR_FORMAT_FLAGS=y
 CONFIG_S390=y
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
@@ -557,6 +562,8 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GCC_PLUGINS=y
 CONFIG_FUNCTION_ALIGNMENT_8B=y
 CONFIG_FUNCTION_ALIGNMENT=8
+CONFIG_CC_HAS_MIN_FUNCTION_ALIGNMENT=y
+CONFIG_CC_HAS_SANE_FUNCTION_ALIGNMENT=y
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -3489,6 +3496,7 @@ CONFIG_DEBUG_INFO_DWARF4=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 CONFIG_DEBUG_INFO_COMPRESSED_NONE=y
 # CONFIG_DEBUG_INFO_COMPRESSED_ZLIB is not set
+# CONFIG_DEBUG_INFO_COMPRESSED_ZSTD is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 CONFIG_GDB_SCRIPTS=y
 CONFIG_FRAME_WARN=2048
@@ -3574,6 +3582,7 @@ CONFIG_HAVE_ARCH_KASAN_VMALLOC=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 CONFIG_CC_HAS_WORKING_NOSANITIZE_ADDRESS=y
 CONFIG_KASAN=y
+CONFIG_CC_HAS_KASAN_MEMINTRINSIC_PREFIX=y
 CONFIG_KASAN_GENERIC=y
 # CONFIG_KASAN_OUTLINE is not set
 CONFIG_KASAN_INLINE=y
