dashboard/config: update Android 6.12
Use the latest available revision and disable ANDROID_BINDER_IPC - as of
now, it's no longer possible to compile in both C and Rust versions at
the same time.

--- a/dashboard/config/linux/bits/android-subsystems.yml
+++ b/dashboard/config/linux/bits/android-subsystems.yml
@@ -31,4 +31,6 @@ config:
  - USB_CONFIGFS_F_HID
  - USB_CONFIGFS_F_UVC
  - USB_CONFIGFS_F_PRINTER
+ - ANDROID_BINDER_IPC: [n, android-6.12]
+ - ANDROID_BINDER_IPC_RUST: [v6.12, rust]
  - ANDROID_BINDER_DEVICES: "binder0,binder1"
