dashboard/config/linux: update to v6.19-rc5

--- a/dashboard/config/linux/bits/arm.yml
+++ b/dashboard/config/linux/bits/arm.yml
@@ -28,7 +28,8 @@ config:
  - HIGHMEM
  - HIGHPTE
  - DEBUG_HIGHMEM
- - BOUNCE
+ # Removed by "mm: remove the BOUNCE config option".
+ - BOUNCE: [-v6.19]
  - BIG_LITTLE
  - BL_SWITCHER
  - ARM_BIG_LITTLE_CPUIDLE
