--- a/dashboard/config/linux/bits/arm64_emu.yml
+++ b/dashboard/config/linux/bits/arm64_emu.yml
@@ -1049,6 +1049,7 @@ config:
  - DWMAC_SOCFPGA: n
  - POWER_RESET_SYSCON_POWEROFF: n
  - AHCI_DWC: n
+ - ARCH_APPLE: n
  - APPLE_PMGR_PWRSTATE: n
  - MFD_SEC_I2C: n
  - DRM_CDNS_DSI: n
