--- a/dashboard/config/linux/bits/net.yml
+++ b/dashboard/config/linux/bits/net.yml
@@ -104,7 +104,7 @@ config:
  - NETFILTER_INGRESS
  - NETFILTER_ADVANCED
  - NETFILTER_XTABLES
- - NETFILTER_XTABLES_COMPAT: [v5.15, -arm]
+ - NETFILTER_XTABLES_COMPAT: [v5.15, -arm, -s390]
  # Required since "netfilter: Exclude LEGACY TABLES on PREEMPT_RT"
  - NETFILTER_XTABLES_LEGACY: [v6.17, -preempt_rt]
  - NF_CONNTRACK
