--- a/dashboard/config/linux/bits/subsystems.yml
+++ b/dashboard/config/linux/bits/subsystems.yml
@@ -469,11 +469,13 @@ config:
  - ION_SYSTEM_HEAP: [-v5.10]
  - ION_CMA_HEAP: [-v5.10]
  - CHROME_PLATFORMS: n
- - AMD_IOMMU: n
+ - AMD_IOMMU: [x86_64]
+ # Is needed for IOMMUFD_TEST.
+ - IOMMU_PT_AMDV1: [v6.19, x86_64]
  - INTEL_IOMMU: [x86_64]
  # IOMMUFD must be enabled in order to keep VFIO_CONTAINER disabled.
  - IOMMUFD: [v6.2]
- - IOMMUFD_TEST: [v6.2]
+ - IOMMUFD_TEST: [v6.2, x86_64]
  # Generally we should not enable this since we don't run any boot unit tests.
  # The only reason to enable it is IOMMUFD_TEST, which really shouldn't
  # depend on RUNTIME_TESTING_MENU since it only adds debug checks.
