--- a/dashboard/config/linux/bits/linux-next.yml
+++ b/dashboard/config/linux/bits/linux-next.yml
@@ -3,6 +3,7 @@
 
 kernel:
  repo: git://git.kernel.org/pub/scm/linux/kernel/git/next/linux-next-history.git
- tag: next-20251014
+ tag: next-20260115
 config:
  - BOOTPARAM_HUNG_TASK_PANIC: [1, weak]
+ - BOOTPARAM_SOFTLOCKUP_PANIC: [1, weak]
