--- a/dashboard/config/linux/bits/s390.yml
+++ b/dashboard/config/linux/bits/s390.yml
@@ -10,4 +10,5 @@ config:
  - CMDLINE: [n, override]
  # See the comment in x86_64.yml re these numbers.
  - RCU_CPU_STALL_TIMEOUT: 300
- - COMPAT
+ # Removed by "s390: Remove compat support".
+ - COMPAT: [-v6.19]
