dashboard/config/linux: regenerate

--- a/dashboard/config/linux/stable-6.6-kasan.config
+++ b/dashboard/config/linux/stable-6.6-kasan.config
@@ -7304,6 +7304,7 @@ CONFIG_IOMMU_SUPPORT=y
 #
 # Generic IOMMU Pagetable Support
 #
+CONFIG_IOMMU_IO_PGTABLE=y
 # end of Generic IOMMU Pagetable Support
 
 # CONFIG_IOMMU_DEBUGFS is not set
@@ -7313,7 +7314,8 @@ CONFIG_IOMMU_DEFAULT_DMA_LAZY=y
 CONFIG_OF_IOMMU=y
 CONFIG_IOMMU_DMA=y
 CONFIG_IOMMU_SVA=y
-# CONFIG_AMD_IOMMU is not set
+CONFIG_AMD_IOMMU=y
+# CONFIG_AMD_IOMMU_V2 is not set
 CONFIG_DMAR_TABLE=y
 CONFIG_INTEL_IOMMU=y
 CONFIG_INTEL_IOMMU_SVM=y
