--- a/dashboard/config/linux/stable-6.6-arm64-kasan.config
+++ b/dashboard/config/linux/stable-6.6-arm64-kasan.config
@@ -9422,7 +9422,7 @@ CONFIG_OF_IOMMU=y
 CONFIG_IOMMU_DMA=y
 CONFIG_IOMMUFD=y
 # CONFIG_IOMMUFD_VFIO_CONTAINER is not set
-CONFIG_IOMMUFD_TEST=y
+# CONFIG_IOMMUFD_TEST is not set
 CONFIG_ROCKCHIP_IOMMU=y
 # CONFIG_SUN50I_IOMMU is not set
 CONFIG_TEGRA_IOMMU_SMMU=y
