dashboard/config/linux/bits: enable DEBUG_BUGVERBOSE_DETAILED
Closes #6595.

--- a/dashboard/config/linux/bits/debug.yml
+++ b/dashboard/config/linux/bits/debug.yml
@@ -51,6 +51,7 @@ config:
  - RING_BUFFER_VALIDATE_TIME_DELTAS: [x86_64, v5.11]
  # The check runs episodically, so won't be attributed to a test. And can happen on any memory corruption.
  - X86_CHECK_BIOS_CORRUPTION: n
+ - DEBUG_BUGVERBOSE_DETAILED: [v6.19]
 
  # For context see: https://groups.google.com/g/syzkaller/c/SoydtBd-dYs/m/ns67L4ApAwAJ
  - VIRT_CPU_ACCOUNTING_GEN
