dashboard/config/linux: enable more configs
1. DEBUG_GENERIC_PT.
2. DEBUG_XARRAY.
3. PHY_GOOGLE_USB.

--- a/dashboard/config/linux/bits/usb.yml
+++ b/dashboard/config/linux/bits/usb.yml
@@ -12,3 +12,6 @@ config:
  # We don't need/test these on the USB instance.
  - USB_GADGETFS: n
  - USB_CONFIGFS: n
+
+ # It looks important but is not present iv v6.19-rc5.
+ - PHY_GOOGLE_USB: [v6.20]
