syz-cluster: disable some trace calls for non-bpf targets
These calls only cause unrelated hungs and lost connection to machine
bugs.

--- a/syz-cluster/pkg/fuzzconfig/testdata/singular/default.base.cfg
+++ b/syz-cluster/pkg/fuzzconfig/testdata/singular/default.base.cfg
@@ -21,9 +21,11 @@
 	"reproduce": true,
 	"preserve_corpus": true,
 	"disable_syscalls": [
-		"perf_event_open*",
 		"syz_mount_image$hfs",
-		"syz_mount_image$gfs*"
+		"syz_mount_image$gfs*",
+		"perf_event_open*",
+		"ioctl$PERF*",
+		"bpf$BPF_RAW_TRACEPOINT_OPEN"
 	],
 	"strace_bin": "",
 	"strace_bin_on_target": false,
@@ -44,6 +46,7 @@
 		"reset_acc_state": false,
 		"remote_cover": true,
 		"cover_edges": false,
-		"descriptions_mode": "manual"
+		"descriptions_mode": "manual",
+		"enable_kfuzztest": false
 	}
 }
