--- a/syz-cluster/pkg/fuzzconfig/testdata/singular/net.base.cfg
+++ b/syz-cluster/pkg/fuzzconfig/testdata/singular/net.base.cfg
@@ -94,6 +94,11 @@
 		"openat$ptp*",
 		"ioctl$PTP*"
 	],
+	"disable_syscalls": [
+		"perf_event_open*",
+		"ioctl$PERF*",
+		"bpf$BPF_RAW_TRACEPOINT_OPEN"
+	],
 	"strace_bin": "",
 	"strace_bin_on_target": false,
 	"execprog_bin_on_target": "",
@@ -113,6 +118,7 @@
 		"reset_acc_state": false,
 		"remote_cover": true,
 		"cover_edges": false,
-		"descriptions_mode": "manual"
+		"descriptions_mode": "manual",
+		"enable_kfuzztest": false
 	}
 }
