--- a/syz-cluster/pkg/fuzzconfig/testdata/singular/default.patched.cfg
+++ b/syz-cluster/pkg/fuzzconfig/testdata/singular/default.patched.cfg
@@ -22,9 +22,11 @@
 	"fuzzing_vms": 3,
 	"preserve_corpus": true,
 	"disable_syscalls": [
-		"perf_event_open*",
 		"syz_mount_image$hfs",
-		"syz_mount_image$gfs*"
+		"syz_mount_image$gfs*",
+		"perf_event_open*",
+		"ioctl$PERF*",
+		"bpf$BPF_RAW_TRACEPOINT_OPEN"
 	],
 	"strace_bin": "",
 	"strace_bin_on_target": false,
@@ -45,6 +47,7 @@
 		"reset_acc_state": false,
 		"remote_cover": true,
 		"cover_edges": false,
-		"descriptions_mode": "manual"
+		"descriptions_mode": "manual",
+		"enable_kfuzztest": false
 	}
 }
