dashboard/config/linux: compile with BB information
For x86_64 since v6.13 we have AUTOFDO_CLANG and PROPELLER_CLANG.

1. PROPELLER_CLANG emits .llvm_bb_addr_map section.
2. AUTOFDO_CLANG emits discriminators for line:col.

AUTOFDO_CLANG allows to better identify macros/inline cases.

--- a/dashboard/config/linux/bits/base.yml
+++ b/dashboard/config/linux/bits/base.yml
@@ -119,6 +119,11 @@ config:
  - DEBUG_INFO_BTF: [-v5.13]
  - DEBUG_INFO_REDUCED: n
 
+ # PROPELLER_CLANG adds section .llvm_bb_addr_map that is used to get BB details.
+ # The Discriminators from AUTOFDO_CLANG ensure that line:col info is precise even for macros/inline.
+ - AUTOFDO_CLANG: [clang, x86_64, v6.13]
+ - PROPELLER_CLANG: [clang, x86_64, v6.13]
+
  # This should make behavior more deterministic.
  - INIT_ON_ALLOC_DEFAULT_ON: [v4.16, -kmsan]
 
