dashboard/config/linux: regenerate

--- a/dashboard/config/linux/upstream-kcsan.config
+++ b/dashboard/config/linux/upstream-kcsan.config
@@ -833,9 +833,9 @@ CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG_THIN=y
 CONFIG_LTO_NONE=y
 CONFIG_ARCH_SUPPORTS_AUTOFDO_CLANG=y
-# CONFIG_AUTOFDO_CLANG is not set
+CONFIG_AUTOFDO_CLANG=y
 CONFIG_ARCH_SUPPORTS_PROPELLER_CLANG=y
-# CONFIG_PROPELLER_CLANG is not set
+CONFIG_PROPELLER_CLANG=y
 CONFIG_ARCH_SUPPORTS_CFI=y
 # CONFIG_CFI is not set
 CONFIG_HAVE_CFI_ICALL_NORMALIZE_INTEGERS=y
