--- a/syz-cluster/workflow/boot/workflow-template.yaml
+++ b/syz-cluster/workflow/boot/workflow-template.yaml
@@ -10,14 +10,12 @@ spec:
     - name: boot-action
       inputs:
         parameters:
-          - name: config
-            value: ""
           - name: base-build-id
             value: ""
           - name: patched-build-id
             value: ""
           - name: test-name
-            value: ""
+            value: "Boot"
           - name: report-findings
             value: "false"
         artifacts:
@@ -28,7 +26,6 @@ spec:
         imagePullPolicy: IfNotPresent
         command: ["/bin/boot-action"]
         args: [
-          "--config", "{{inputs.parameters.config}}",
           "--output", "/output/result.json",
           "--session", "{{workflow.parameters.session-id}}",
           "--test_name", "{{inputs.parameters.test-name}}",
