syz-cluster: add a retest action
The action takes a list of findings and runs their reproducers on the
base and the patched kernel.

--- a/syz-cluster/workflow/kustomization.yaml
+++ b/syz-cluster/workflow/kustomization.yaml
@@ -7,3 +7,4 @@ resources:
   - build/workflow-template.yaml
   - boot/workflow-template.yaml
   - fuzz/workflow-template.yaml
+  - retest/workflow-template.yaml
