syz-cluster: rename workflow dirs
Later, test step will belong to session tests (which all workflow/*
actions actually are).

--- a/syz-cluster/overlays/gke/common/kustomization.yaml
+++ b/syz-cluster/overlays/gke/common/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
 patches:
   - target:
       kind: WorkflowTemplate
-      name: (boot|fuzz)-step-template
+      name: (boot|fuzz)-action-template
     patch: |-
       - op: replace
         path: /spec/templates/0/tolerations
@@ -24,7 +24,7 @@ patches:
               effect: "NoSchedule"
   - target:
       kind: WorkflowTemplate
-      name: (boot|fuzz)-step-template
+      name: (boot|fuzz)-action-template
     patch: |-
       - op: replace
         path: /spec/templates/0/nodeSelector
